--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Eleven-Coast Return Portal</title>
+    <link rel="icon" type="image/png" href="/eleven-coast-logo.png" />
+    <meta name="description" content="Start a return or exchange with Eleven Coast" />
+    <meta name="author" content="Eleven Coast" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Eleven-Coast Return Portal" />
+    <meta property="og:description" content="Start a return or exchange with Eleven Coast" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
